<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/store_status"
        android:title="@string/Home_screen"
        android:icon="@drawable/ic_widgets"
        android:iconTint="@color/primary"/>

    <item
        android:id="@+id/category_magement"
        android:title="@string/Category_Management"
        android:icon="@drawable/ic_three_boxes"
        android:iconTint="@color/primary"/>

    <item
        android:id="@+id/app_settings"
        android:title="@string/Settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/primary"/>


    <item
        android:id="@+id/print_management"
        android:title="@string/Print_Management"
        android:icon="@drawable/ic_cat_drink"
        android:iconTint="@color/primary"/>

    <item
        android:id="@+id/signout"
        android:title="@string/Logout"
        android:icon="@drawable/ic_logout"
        android:iconTint="@color/primary"/>
</menu>