<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/myBackgroundSecondary"
    android:id="@+id/fragment_settings"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logo"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_big"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Choose_a_black_and_white_photo"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_normal"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_logo_store"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/logo_default"
            android:layout_marginTop="10dp"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Store_name"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_normal"
            />
        <EditText
            android:id="@+id/edt_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:textSize="@dimen/size_normal"
            android:textColor="@color/white"
            android:textColorHint="@color/grey300"
            android:hint="@string/Enter_name"
            android:background="@drawable/background_r50_my_background_primary"
            android:paddingVertical="14dp"
            android:includeFontPadding="true"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Phone_number"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_normal"
            />
        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:textSize="@dimen/size_normal"
            android:textColor="@color/white"
            android:textColorHint="@color/grey300"
            android:hint="@string/Enter_phone_number"
            android:background="@drawable/background_r50_my_background_primary"
            android:paddingVertical="14dp"
            android:includeFontPadding="true"
            android:paddingHorizontal="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_normal"
            />
        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:textSize="@dimen/size_normal"
            android:textColor="@color/white"
            android:textColorHint="@color/grey300"
            android:hint="@string/Enter_address"
            android:background="@drawable/background_r50_my_background_primary"
            android:paddingVertical="14dp"
            android:includeFontPadding="true"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <TextView
            android:id="@+id/title_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language"
            android:textColor="@color/grey500"
            android:textSize="@dimen/size_normal"
            android:layout_centerVertical="true"
            />
        <LinearLayout
            android:id="@+id/ln_locale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:layout_alignParentEnd="true"
            >

            <TextView
                android:id="@+id/tv_locale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:textColor="@color/white"
                android:textSize="@dimen/size_normal"
                android:layout_toStartOf="@id/iv_ic_arrow_dropdown"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:paddingStart="20dp"/>
            <ImageView
                android:id="@+id/iv_ic_arrow_dropdown"
                android:layout_width="@dimen/size_bigest"
                android:layout_height="@dimen/size_bigest"
                android:src="@drawable/ic_arrow_drop_down"
                app:tint="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/primary"/>


</LinearLayout>