<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/myBackgroundPrimary"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Print_Management"
        android:textColor="@color/white"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/tv_notYetPrinter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Not_yet_printer"
        android:textColor="@color/white"
        android:textSize="@dimen/size_normal"
        android:background="@drawable/background_r5_my_background_secondary"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_printer_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btn_show_bottomSheetDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Add_Printer"
        android:backgroundTint="@color/primary"
        android:paddingVertical="15dp"/>


</LinearLayout>